--- a/bower.json
+++ b/bower.json
@@ -18,6 +18,8 @@
   ],
   "dependencies": {
     "EaselJS": "^1.0.2",
-    "opspark-draw": "^1.0.0"
+    "opspark-draw": "^1.0.0",
+    "V6": "^0.0.2",
+    "lodash": "^4.17.11"
   }
 }
